# testCMake

./: .gitignore  CMakeLists.txt  main.cpp
